Ingress Controller/Single Route App/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingresscontroller-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingresscontroller-app
  template:
    metadata:
      name: ingresscontroller-app-pod
      labels:
        app: ingresscontroller-app
    spec:
      containers:
      - name: route-app
        image: sreeram91/ingresscontroller-gcloudexample
        resources:
          limits:
            memory: 100Mi
            cpu: 20m
        ports:
        - containerPort: 3004
