Ingress Controller/Single Route App/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingresscontroller-app-service
spec:
  type: NodePort
  selector:
    app: ingresscontroller-app
  ports:
  - port: 3050
    targetPort: 3004
    nodePort: 30729
