Ingress Controller/Single Route App/k8s/nginx-ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: route-app-ingress 
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ingresscontroller-app-service
            port: 
              number: 3004
      - pathType: Prefix
        path: "/about"
        backend:
          service:
            name: ingresscontroller-app-service
            port:
              number: 3004
